# RATE

./: .gitignore  =2022.8.12  README copy.md  README.md  ass-ret.ipynb  download_d4rl_datasets.py  pyproject.toml  requirements.txt  test-mdp.ipynb  test.ipynb  test_arshot_integration.py  test_vizdoom_validation.py  validate_tmaze_from_ckpt_batch.py
Atari/: train_rate_atari.py
Elastic-DT/: example_vizdoom_workflow.py
ManiSkill/: generate_shellgame_data.ipynb  generate_shellgame_data.py  my_env 3 mugs and ball.ipynb  my_env 3 mugs.ipynb  my_env copy 2.ipynb  my_env copy.ipynb  my_env.ipynb  naperstki.ipynb  ppo_rgb.py  ppo_rgb_shell_game.py  ppo_rgb_thimble.py  shell_game_pick.ipynb  shell_game_pick.py  shell_game_pick_ball.ipynb  shell_game_pick_v2.ipynb  shell_game_push.ipynb  shell_game_push.py  shell_game_push_ball.ipynb  shell_game_push_v2.ipynb  shell_game_push_v2_speedup.ipynb  shell_game_push_visibility.ipynb  thimble_env.ipynb  thimble_env.py  touch_envs.ipynb
MemoryMaze/: readme-memorymaze.md  val_dt.py  val_rate.py
MinigridMemory/: requirements.txt
MuJoCo/: conda_env.yml  train_rate_mujoco_ca.py
RATE/: RATE_model.py  TrajectoryTransformer.py  __init__.py  mem_transformer_v2_GTrXL copy.py  mem_transformer_v2_GTrXL.py
RATE_GTrXL/: mem_transformer_v2_GTrXL.py
TMaze_new/: requirements.txt
VizDoom/: requirements.txt
offline_rl_baselines/: BC.py  CQL.py  DLSTM.py  DMamba.py  Doom_CQL.ipynb  IQL.py  LSDT.py  __init__.py  doom_cql.py  doom_cql_bc_lstm.py  lstm_agent_cql.py  lstm_agent_cql_bc.py  mlp_agent_cql_bc.py  run.sh  train_doom_cql_bc_lstm.py  train_doom_cql_bc_mlp.py  train_memory_maze_cql_bc_lstm.py  train_minigrid_memory_cql_bc_lstm.py  train_tmaze_cql_bc_lstm copy.py  train_tmaze_cql_bc_lstm.py  train_tmaze_cql_bc_mlp.py
recurrent_baselines/: README.md  recurrent_baselines_readme.md
requirements/: requirements_diffusion_policy.txt  requirements_dmamba.txt  requirements_dmamba_minigrid.txt  requirements_main.txt  requirements_memory_maze.txt  requirements_mikasa_robo.txt  requirements_minigrid_memory.txt  requirements_popgym.txt
run_experiments/: Memory_Maze.sh  Minigrid_Memory.sh  POPGym.sh  TMaze.sh  ViZDoom_Two_colors.sh  matl_vizdoom.sh  run_cartpole.sh  run_rate_popgym_autoencode.sh  test_popgym.sh
src/: base_trainer.py  inference_handler.py  train.py  trainer copy.py  trainer.py
(+705 files in other folders)
