[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RATE"
version = "0.0.1"
authors = [
    { name="Egor Cherepanov", email="cherepanovegor2018@gmail.com" },
]
description = "RATE: Recurrent Action Transformer with Memory"
readme = "RATE/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium==0.29.1",
    "mani_skill==3.0.0b15",
    "matplotlib==3.9.2",
    "numpy==1.23.5",
    "wandb==0.18.5",
    "tensorboard==2.18.0",
    "colorama==0.4.6",
    "tqdm",
    "pandas",
    "ipywidgets",
    "vizdoom==1.2.2",
    "opencv-python",
]

[project.urls]
"Homepage" = "https://github.com/CognitiveAISystems/RATE"
"Repository" = "https://github.com/CognitiveAISystems/RATE.git"

[tool.setuptools]
packages = ["src", "RATE"]

[tool.setuptools.package-data]
"RATE" = ["requirements/*.txt"]


[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100