[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RATE"
version = "0.0.1"
authors = [
    { name="Egor Cherepanov", email="cherepanovegor2018@gmail.com" },
]
description = "RATE: Recurrent Action Transformer with Memory"
readme = "RATE/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.6.0",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "wandb==0.18.5",
    "tensorboard==2.18.0",
    "colorama==0.4.6",
    "tqdm==4.66.5",
    "pandas==1.5.0",
    "ipywidgets",
    "coolname==2.2.0",
    "tyro==0.9.16"
]

[project.urls]
"Homepage" = "https://github.com/CognitiveAISystems/RATE"
"Repository" = "https://github.com/CognitiveAISystems/RATE.git"

[tool.setuptools]
packages = ["src", "RATE", "offline_rl_baselines"]

[tool.setuptools.package-data]
"RATE" = ["requirements/*.txt"]


[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100